fix: model builder

--- a/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
@@ -42,12 +42,13 @@ class BlogImpl implements ModelFactory.Interface {
 
         return [
             builder
-                .public()
-                .name("Category")
-                .modelId("category")
-                .group(group.slug)
-                .singularApiName("Category")
-                .pluralApiName("Categories")
+                .public({
+                    name: "Category",
+                    modelId: "category",
+                    group: group.slug,
+                    singularApiName: "Category",
+                    pluralApiName: "Categories"
+                })
                 .description("A model used to categorize articles.")
                 .fields(fieldBuilder => {
                     return {
@@ -57,12 +58,13 @@ class BlogImpl implements ModelFactory.Interface {
                 })
                 .layout([["title"], ["slug"]]),
             builder
-                .public()
-                .name("Author")
-                .modelId("author")
-                .group(group.slug)
-                .singularApiName("Author")
-                .pluralApiName("Authors")
+                .public({
+                    name: "Author",
+                    modelId: "author",
+                    group: group.slug,
+                    singularApiName: "Author",
+                    pluralApiName: "Authors"
+                })
                 .description("A model used to create article authors.")
                 .fields(fieldBuilder => {
                     return {
@@ -73,12 +75,13 @@ class BlogImpl implements ModelFactory.Interface {
                 })
                 .layout([["name"], ["bio"], ["avatar"]]),
             builder
-                .public()
-                .name("Article")
-                .modelId("article")
-                .group(group.slug)
-                .singularApiName("Article")
-                .pluralApiName("Articles")
+                .public({
+                    name: "Article",
+                    modelId: "article",
+                    group: group.slug,
+                    singularApiName: "Article",
+                    pluralApiName: "Articles"
+                })
                 .description("A model used to create blog articles.")
                 .fields(fieldBuilder => {
                     return {
