--- a/docs/developer-docs/6.0.x/headless-cms/examples/private-model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/examples/private-model.mdx
@@ -32,9 +32,10 @@ class UserLogImpl implements ModelFactory.Interface {
     public async execute(builder: ModelFactory.Builder): ModelFactory.Return {
         return [
             builder
-                .private()
-                .name("UserLog")
-                .modelId("userLog")
+                .private({
+                    name: "UserLog",
+                    modelId: "userLog"
+                })
                 .fields(fieldBuilder => {
                     return {
                         id: fieldBuilder.text().fieldId("id").label("id").required(),
