--- a/docs/developer-docs/6.0.x/headless-cms/examples/single-entry-model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/examples/single-entry-model.mdx
@@ -45,13 +45,14 @@ class SettingsImpl implements ModelFactory.Interface {
 
         return [
             builder
-                .public()
+                .public({
+                  name: "Settings",
+                  modelId: "settings",
+                  group: group.slug,
+                  singularApiName: "Setting",
+                  pluralApiName: "Settings"
+                })
                 .singleEntry()
-                .name("Settings")
-                .modelId("settings")
-                .group(group.slug)
-                .singularApiName("Setting")
-                .pluralApiName("Settings")
                 .description("A model used to store settings.")
                 .fields(fieldBuilder => {
                     return {
