--- a/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer.mdx
@@ -74,7 +74,7 @@ Rich text fields store formatted text content using Lexical editor.
 
 ## DateTime Field
 
-DateTime fields store date and time values in various formats.
+DateTime fields store date and time values in various formats. The format is defined using the `settings.type` property.
 
 **`date-time-input`** - Renders input for various formats of date and time. Supports: `dateOnly`, `dateTimeWithoutTimezone`, `dateTimeWithTimezone`, `time`.
 
