--- a/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
@@ -52,8 +52,8 @@ class BlogImpl implements ModelFactory.Interface {
                 .description("A model used to categorize articles.")
                 .fields(fieldBuilder => {
                     return {
-                        title: fieldBuilder.text().fieldId("title").label("Title").required(),
-                        slug: fieldBuilder.text().fieldId("slug").label("Slug").required()
+                        title: fieldBuilder.text().label("Title").required(),
+                        slug: fieldBuilder.text().label("Slug").required()
                     };
                 })
                 .layout([["title"], ["slug"]]),
@@ -68,9 +68,9 @@ class BlogImpl implements ModelFactory.Interface {
                 .description("A model used to create article authors.")
                 .fields(fieldBuilder => {
                     return {
-                        name: fieldBuilder.text().fieldId("name").label("Name").required(),
-                        bio: fieldBuilder.richText().fieldId("bio").label("Bio").required(),
-                        avatar: fieldBuilder.file().fieldId("avatar").label("Avatar")
+                        name: fieldBuilder.text().label("Name").required(),
+                        bio: fieldBuilder.richText().label("Bio").required(),
+                        avatar: fieldBuilder.file().label("Avatar")
                     };
                 })
                 .layout([["name"], ["bio"], ["avatar"]]),
@@ -85,16 +85,14 @@ class BlogImpl implements ModelFactory.Interface {
                 .description("A model used to create blog articles.")
                 .fields(fieldBuilder => {
                     return {
-                        title: fieldBuilder.text().fieldId("title").label("Title").required(),
-                        slug: fieldBuilder.text().fieldId("slug").label("Slug").required(),
+                        title: fieldBuilder.text().label("Title").required(),
+                        slug: fieldBuilder.text().label("Slug").required(),
                         content: fieldBuilder
                             .richText()
-                            .fieldId("content")
                             .label("Content")
                             .required(),
                         category: fieldBuilder
                             .ref()
-                            .fieldId("category")
                             .label("Category")
                             .required()
                             .models([
