--- a/docs/developer-docs/6.0.x/headless-cms/examples/private-model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/examples/private-model.mdx
@@ -4,8 +4,6 @@ title: Private Model Builder and Usage
 description: About Private Models, how and where to use them.
 ---
 
-
-
 import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
@@ -38,8 +36,8 @@ class UserLogImpl implements ModelFactory.Interface {
                 })
                 .fields(fieldBuilder => {
                     return {
-                        id: fieldBuilder.text().fieldId("id").label("id").required(),
-                        ip: fieldBuilder.text().fieldId("ip").label("ip").required()
+                        id: fieldBuilder.text().label("id").required(),
+                        ip: fieldBuilder.text().label("ip").required()
                     };
                 })
         ];
