--- a/docs/developer-docs/6.0.x/headless-cms/builder/field.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/builder/field.mdx
@@ -39,7 +39,7 @@ All field types share these common configuration methods:
 
 **`tags(tags: string[])`** - Adds tags to the field for categorization.
 
-**`renderer(name: string, settings?: Record<string, any>)`** - Sets the field renderer. See [Field Renderers](/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer) for available renderers.
+**`renderer(name: string, settings?: Record<string, any>)`** - Sets the field renderer. See [Field Renderers](/docs/headless-cms/ui/field-renderer) for available renderers.
 
 **`settings(settings: Record<string, any>)`** - Sets additional field settings.
 
@@ -340,4 +340,4 @@ title: registry.text()
     .renderer("text-input")
 ```
 
-For a complete list of available renderers and which fields they support, see the [Field Renderers](/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer) documentation.
+For a complete list of available renderers and which fields they support, see the [Field Renderers](/docs/headless-cms/ui/field-renderer) documentation.
