--- a/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/builder/model.mdx
@@ -91,9 +91,22 @@ class BlogImpl implements ModelFactory.Interface {
                             .richText()
                             .label("Content")
                             .required(),
+                        author: fieldBuilder
+                            .ref()
+                            .renderer("ref-advanced-single")
+                            .label("Author")
+                            .required()
+                            .models([
+                                {
+                                    modelId: "author"
+                                }
+                            ]),
                         category: fieldBuilder
                             .ref()
+                            .list()
+                            .renderer("ref-advanced-single")
                             .label("Category")
+                            .listMinLength(1)
                             .required()
                             .models([
                                 {
