feat: add extend tenant model article

--- a/docs/developer-docs/6.0.x/headless-cms/builder/field.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/builder/field.mdx
@@ -25,7 +25,11 @@ All field types share these common configuration methods:
 
 **`label(text: string)`** - Sets the field label displayed in the UI.
 
-**`helpText(text: string)`** - Sets help text shown below the field.
+**`description(text: string)`** - Sets description text shown below the field label.
+
+**`note(text: string)`** - Sets a note shown below the field.
+
+**`help(text: string)`** - Sets help text shown in the tooltip next to the field label.
 
 **`placeholder(text: string)`** - Sets placeholder text for input fields.
 
@@ -69,7 +73,7 @@ Boolean fields represent true/false values.
 title: "Published",
 field: registry.boolean()
     .label("Published")
-    .helpText("Is this content published?")
+    .description("Is this content published?")
     .defaultValue(false)
 ```
 
