fix: update custom-components

--- a/docs/user-guides/6.0.x/website-builder/essentials/custom-components.mdx
+++ b/docs/user-guides/6.0.x/website-builder/essentials/custom-components.mdx
@@ -16,9 +16,8 @@ In this tutorial, we explain how to create, register and use custom components i
 
 - Step 1: Add a React component file
 - Step 2: Register the component
-- Step 3: Ensure the group matches the one registered
-- Step 4: Configure local env vars
-- Step 5: Open the editor to verify the component appears in the chosen group.
+- Step 3: Ensure the group matches the one registered
+- Step 4: Open the editor to verify the component appears in the chosen group
 
 ## Overview
 
@@ -113,26 +112,20 @@ registerComponentGroup({
 });
 ```
 
-**Where components are wired into the site**
-
-- `src/editorComponents/index.tsx` exports the array `editorComponents`. The `DocumentRenderer` in `src/components/DocumentRenderer.tsx` imports that array and passes it to the Webiny `DocumentRenderer`.
-- See: `src/editorComponents/index.tsx` and `src/components/DocumentRenderer.tsx`
-
 <Alert type="success" title="Tips and best practices">
-  - Keep components presentation-focused; prefer receiving plain data from inputs rather than
-  coupling to editor APIs inside the component. - For rich text, prefer `createLexicalInput` where
-  content is saved as Lexical nodes and will be rendered by `DocumentRenderer`. - Use
-  `createSlotInput` to allow nesting arbitrary content inside your block. - Keep components
-  SSR-friendly. Use client-only code (like browser-only libs) inside a child component or guarded by
+
+  - Keep components presentation-focused; prefer receiving plain data from inputs rather than coupling to editor APIs inside the component.
+  
+  - For rich text, prefer `createLexicalInput` where content is saved as Lexical nodes and will be rendered by `DocumentRenderer`.
+  
+  - Use `createSlotInput` to allow nesting arbitrary content inside your block.
+  
+  - Keep components SSR-friendly. Use client-only code (like browser-only libs) inside a child component or guarded by
   dynamic import to avoid SSR issues.
+  
 </Alert>
 
-### Step 4: Configure local env vars (if you haven't done so)
-
-- Ensure `NEXT_PUBLIC_WEBSITE_BUILDER_API_HOST`, `NEXT_PUBLIC_WEBSITE_BUILDER_API_KEY`, and `NEXT_PUBLIC_WEBSITE_BUILDER_API_TENANT` are configured in your `.env` file (see the Next.js Starter Kit article for full setup).
-- The editor will connect to your Webiny instance and pick up the registered groups/components.
-
-### Step 5: Open the editor to verify the component appears in the chosen group.
+### Step 4: Open the editor to verify the component appears in the chosen group.
 
 - Run the site and open the editor to verify the component appears in the chosen group.
 
