update to "Custom Components" article, but need to add new example

--- a/docs/user-guides/6.0.x/website-builder/essentials/custom-components.mdx
+++ b/docs/user-guides/6.0.x/website-builder/essentials/custom-components.mdx
@@ -27,22 +27,22 @@ In this tutorial, we explain how to create, register and use custom components i
 
 ## Files to inspect
 
-- `src/editorComponents/index.tsx` — the central list of editor components and input definitions: `src/editorComponents/index.tsx`
-- `src/components/DocumentRenderer.tsx` — how components are provided to the renderer: `src/components/DocumentRenderer.tsx`
-- `src/contentSdk/initializeContentSdk.ts` — where component groups are registered: `src/contentSdk/initializeContentSdk.ts`
+- `src/editorComponents/index.tsx` — the central list of editor components and input definitions
+- `src/components/DocumentRenderer.tsx` — how components are provided to the renderer
+- `src/contentSdk/initializeContentSdk.ts` — where component groups are registered
 
 ## Step-by-step: Create a new custom component
 
 ### Step 1: Add a React component file
 
-Add a React component file under `src/editorComponents` (or a subfolder).
+Add a React component file under `src/editorComponents` (or a subfolder). In this tutorial we will create `MyBlock` component.
 
 - Prefer exporting a named component (e.g. `export const MyBlock = () => { ... }`).
 - Keep the component as a standard React functional component.
 
-Example minimal component: `src/editorComponents/MyBlock.tsx`
+Example minimal component:
 
-```tsx
+```diff-tsx src/editorComponents/MyBlock.tsx
 import React from "react";
 
 export interface MyBlockProps {
@@ -75,7 +75,7 @@ import {
   createTextInput,
   createLongTextInput
 } from "@webiny/website-builder-nextjs";
-import { MyBlock } from "./MyBlock";
+import { MyBlock } from "./components/MyBlock";
 
 createComponent(MyBlock, {
   name: "Custom/MyBlock",
@@ -102,7 +102,9 @@ Notes:
 ### Step 3: Ensure the group matches the one registered
 
 - Component groups (editor categories) are registered in `src/contentSdk/initializeContentSdk.ts` with `registerComponentGroup`.
-- Pick an existing group (`custom`, `basic`, `sample`) or add a new one in `initializeContentSdk.ts`. For example, for a new `Demo Group` add the following:
+- Pick an existing group (`custom`, `basic`, `sample`) or add a new one in `initializeContentSdk.ts`. 
+
+In this tutorial, we used an existing group, but if you ned to create a new one, for example, a new `Demo Group` add the following to `initializeContentSdk.ts`:
 
 ```tsx
 registerComponentGroup({
@@ -111,7 +113,7 @@ registerComponentGroup({
   description: "Demo components"
 });
 ```
-
+Note: the order in which the Component groups show in the Website builder depends on the order in which they were added to the file above.
 <Alert type="success" title="Tips and best practices">
 
   - Keep components presentation-focused; prefer receiving plain data from inputs rather than coupling to editor APIs inside the component.
@@ -129,8 +131,3 @@ registerComponentGroup({
 
 - Run the site and open the editor to verify the component appears in the chosen group.
 
-**Examples**
-
-- `Hero`, `CalloutBox`, `TitleBox`, `WebinyGrid`, `AnimatedIcon` are registered in `src/editorComponents/index.tsx`. Inspect them for more advanced patterns such as slot inputs, file inputs, and custom select options.
-  - Example registration and inputs: `src/editorComponents/index.tsx`
-- The icon input uses a helper `iconEditorComponent()` defined in `src/editorComponents/iconComponent/iconEditorComponent.tsx`.
