--- a/docs/developer-docs/6.0.x/basic/di.mdx
+++ b/docs/developer-docs/6.0.x/basic/di.mdx
@@ -8,7 +8,7 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- How to create an abstraction in Webiny?
+- How to create an abstraction?
 - How to create an implementation of an abstraction?
 - How to declare dependencies?
 - How to use the decorator pattern?
