--- a/docs/developer-docs/6.0.x/basic/result.mdx
+++ b/docs/developer-docs/6.0.x/basic/result.mdx
@@ -16,7 +16,7 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Webiny is utilizing the `Result` pattern, and there is a `Result` class that helps with that.
+System is utilizing the `Result` pattern, and there is a `Result` class that helps with that.
 
 The `Result` pattern is a way to represent the outcome of an operation that can either succeed or fail.
 Instead of throwing exceptions, functions return a `Result` object that encapsulates either a successful value or an error.
@@ -124,7 +124,7 @@ const myMethod: MyMethod = async (params) => {
 
 ## Result Unwrap
 
-When using `Webiny` methods and functions that return a `Result` object, you might want to get the actual value or error types from the `Result` object.
+When using methods and functions that return a `Result` object, you might want to get the actual value or error types from the `Result` object.
 
 If the type is not available for you to import, you can use the `Result.UnwrapResult` and `Result.UnwrapError` utility to get those types.
 
@@ -138,7 +138,7 @@ export type IGetEntryByIdValue = Result.UnwrapResult<GetEntryByIdUseCase.Result>
 export type IGetEntryByIdError = Result.UnwrapError<GetEntryByIdUseCase.Result>;
 ```
 
-This can be useful when you want to use return types from Webiny through your own code, but the types are not directly available for import.
+This can be useful when you want to use return types from the system through your own code, but the types are not directly available for import.
 
 
 ## Conclusion
