--- a/docs/developer-docs/6.0.x/graphql/about.mdx
+++ b/docs/developer-docs/6.0.x/graphql/about.mdx
@@ -8,7 +8,7 @@ import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
-- How Webiny uses GraphQL for its API layer?
+- How system uses GraphQL for its API layer?
 - What is the GraphQL Schema Factory pattern?
 - How to extend and customize GraphQL schemas?
 
@@ -16,15 +16,15 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Webiny uses GraphQL as its primary API layer for all core applications including Headless CMS, Website Builder, and File Manager. GraphQL provides a flexible, type-safe way to query and mutate data, allowing clients to request exactly the data they need.
+System uses GraphQL as its primary API layer for all core applications including Headless CMS, Website Builder, and File Manager. GraphQL provides a flexible, type-safe way to query and mutate data, allowing clients to request exactly the data they need.
 
 ### GraphQL Schema Factory
 
-Webiny implements a factory pattern for building GraphQL schemas. The `GraphQLSchemaFactory` interface allows you to extend and customize the GraphQL API by:
+System implements a factory pattern for building GraphQL schemas. The `GraphQLSchemaFactory` interface allows you to extend and customize the GraphQL API by:
 
 - **Adding type definitions** - Define your own GraphQL types, inputs, queries, and mutations
 - **Registering resolvers** - Implement the logic that handles GraphQL operations
 - **Dependency injection** - Access services and use cases within your resolvers
 - **Modular architecture** - Build your schema in a composable, maintainable way
 
-This approach keeps your GraphQL layer thin and focused on data access, while business logic lives in dedicated service classes. You can extend existing schemas or create entirely new GraphQL APIs that integrate seamlessly with Webiny's infrastructure.
+This approach keeps your GraphQL layer thin and focused on data access, while business logic lives in dedicated service classes. You can extend existing schemas or create entirely new GraphQL APIs that integrate seamlessly with the system's infrastructure.
