--- a/docs/developer-docs/6.0.x/graphql/example.mdx
+++ b/docs/developer-docs/6.0.x/graphql/example.mdx
@@ -18,7 +18,7 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Webiny provides a powerful GraphQL API framework that allows you to extend and customize the GraphQL schema. By implementing the `GraphQLSchemaFactory` interface, you can add custom types, queries, and mutations to your Webiny application.
+System provides a powerful GraphQL API framework that allows you to extend and customize the GraphQL schema. By implementing the `GraphQLSchemaFactory` interface, you can add custom types, queries, and mutations to your application.
 
 The example demonstrates a complete implementation of a custom GraphQL query that lists CMS entries from any content model. It shows how to:
 
@@ -27,7 +27,7 @@ The example demonstrates a complete implementation of a custom GraphQL query tha
 - Add resolvers using `addResolver()` with dependency injection support
 - Handle both success and error responses using the Result pattern
 
-This pattern follows Webiny architecture principles, keeping the GraphQL layer thin and delegating business logic to dedicated use cases. The resolver functions receive injected dependencies and handle the communication between the GraphQL API and your application services.
+This pattern follow clean architecture principles, keeping the GraphQL layer thin and delegating business logic to dedicated use cases. The resolver functions receive injected dependencies and handle the communication between the GraphQL API and your application services.
 
 
 ## Query Code Example
