--- a/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/event-handler/group.mdx
@@ -15,7 +15,7 @@ import {Alert} from "@/components/Alert";
 </Alert>
 
 ## Overview
-Webiny Headless CMS provides events for users to hook into.
+Headless CMS provides events for users to hook into.
 
 With the events you can hook into a number of different Group related operations, all of which are listed here.
 
