--- a/docs/developer-docs/6.0.x/tasks/management.mdx
+++ b/docs/developer-docs/6.0.x/tasks/management.mdx
@@ -18,7 +18,7 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Once you've created background tasks, you need to manage them - trigger execution, monitor progress, view logs, and abort tasks when needed. Webiny provides two ways to manage tasks:
+Once you've created background tasks, you need to manage them - trigger execution, monitor progress, view logs, and abort tasks when needed. System provides two ways to manage tasks:
 
 1. **GraphQL API** - Use GraphQL queries and mutations to manage tasks from your frontend applications or external tools
 2. **Programmatic API** - Trigger tasks directly from your backend code using the `TaskService`
