--- a/docs/developer-docs/6.0.x/tasks/reference.mdx
+++ b/docs/developer-docs/6.0.x/tasks/reference.mdx
@@ -18,7 +18,7 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Tasks in Webiny allow you to execute long-running operations asynchronously without blocking the main request-response cycle. By implementing the `TaskDefinition.Interface` and registering it with `TaskDefinition.createImplementation()`, you can create custom background tasks that handle complex operations like batch processing, data migrations, or bulk actions.
+Tasks in the system allow you to execute long-running operations asynchronously without blocking the main request-response cycle. By implementing the `TaskDefinition.Interface` and registering it with `TaskDefinition.createImplementation()`, you can create custom background tasks that handle complex operations like batch processing, data migrations, or bulk actions.
 
 A task definition includes:
 
