--- a/docs/developer-docs/6.0.x/tenant-manager/manage-tenants.mdx
+++ b/docs/developer-docs/6.0.x/tenant-manager/manage-tenants.mdx
@@ -1,7 +1,7 @@
 ---
 id: 17d4de88
 title: Tenant Management via GraphQL API
-description: Learn how to manage tenants within Webiny via the GraphQL API
+description: Learn how to manage tenants within system via the GraphQL API
 ---
 
 import { Alert } from "@/components/Alert";
@@ -12,11 +12,11 @@ import { Alert } from "@/components/Alert";
 
 </Alert>
 
-This guide covers the core tenant management operations available through the Webiny GraphQL API.
+This guide covers the core tenant management operations available through the GraphQL API.
 
 ## Prerequisites
 
-- Access to your Webiny GraphQL API endpoint
+- Access to your GraphQL API endpoint
 - Valid API token with Tenant Manager permissions
 
 ## Mutations
