--- a/docs/developer-docs/6.0.x/website-builder/use-case/pages.mdx
+++ b/docs/developer-docs/6.0.x/website-builder/use-case/pages.mdx
@@ -9,7 +9,7 @@ import {Alert} from "@/components/Alert";
 <Alert type="success" title="WHAT YOU'LL LEARN">
 
 - How to create custom page use cases?
-- How to wrap existing Webiny page use cases?
+- How to wrap existing page use cases?
 - How to handle page operations with proper error handling?
 - How to use the Result pattern with page use cases?
 
@@ -17,9 +17,9 @@ import {Alert} from "@/components/Alert";
 
 ## Overview
 
-Website Builder provides use cases for all page operations. You can create custom use cases that wrap the built-in Webiny use cases to add your own business logic, validation, or error handling.
+Website Builder provides use cases for all page operations. You can create custom use cases that wrap the built-in use cases to add your own business logic, validation, or error handling.
 
-All examples show how to create an abstraction, implement it by wrapping the Webiny use case, and handle results properly using the Result pattern.
+All examples show how to create an abstraction, implement it by wrapping the use case, and handle results properly using the Result pattern.
 
 ## Create Page
 
