--- a/docs/user-guides/6.0.x/website-builder/essentials/nextjs-starter-kit.mdx
+++ b/docs/user-guides/6.0.x/website-builder/essentials/nextjs-starter-kit.mdx
@@ -68,6 +68,9 @@ NEXT_PUBLIC_WEBSITE_BUILDER_API_TENANT: {YOUR_API_TENANT}
 NEXT_PUBLIC_WEBSITE_BUILDER_ADMIN_HOST: {YOUR_ADMIN_HOST} 
 ```
 
+3. Ensure that in the `package.json` the `"@webiny/website-builder-nextjs":` has the right Webiny version against it, e.g. "6.0.0"
+
+
 ## Step 4: Establish the connection
 
 In the Next.js project root, run:
