fix: update starter kit article

--- a/docs/user-guides/6.0.x/website-builder/essentials/nextjs-starter-kit.mdx
+++ b/docs/user-guides/6.0.x/website-builder/essentials/nextjs-starter-kit.mdx
@@ -36,9 +36,9 @@ We will do this in a few simple steps:
 This project uses [Next.js App Router](https://nextjs.org/docs/app)!
 
 
-## Step 1: Fork the repository
+## Step 1: Clone the repository
 
-Use your tools of choice and fork the [Next.js Startet kit repository](https://github.com/webiny/website-builder-nextjs.git)
+Use your tools of choice and clone the [Next.js Startet kit repository](https://github.com/webiny/website-builder-nextjs.git)
 
    ✔️ The project structure should be already visible in your editor.
 
