fix: field renderers

--- a/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer.mdx
+++ b/docs/developer-docs/6.0.x/headless-cms/ui/field-renderer.mdx
@@ -4,6 +4,7 @@ title: Field Renderers
 description: List of available built-in field renderers for the UI of the Headless CMS.
 ---
 
+
 import {Alert} from "@/components/Alert";
 
 <Alert type="success" title="WHAT YOU'LL LEARN">
@@ -112,7 +113,10 @@ Dynamic zone fields allow selecting from predefined templates.
 
 ## Special Field Types
 
-**`text-separator`** - Renders a visual separator to organize form fields. *Field type: `text:separator`.*
+**`ui`** - Renders a visual separator to organize form fields. *Field type: `ui`.*
+Note that the `ui` field is a base field, which other UI fields can be built on top of.
+
+To have a separator, use the `uiSeparator` renderer.
 
 ## Utility Renderers
 
